--- a/index.html
+++ b/index.html
@@ -11,11 +11,27 @@
 <style>
     .jumbotron {
         height: 50rem;
+        margin-bottom: 0px;
+        height: 350px;
+        color: white;
+        text-shadow: black 0.3em 0.3em 0.3em;
+        background: transparent;
+    }
+
+    .bg {
+        background: url('../img/carouelbackground.jpg') no-repeat center center;
+        position: fixed;
+        width: 100%;
+        height: 350px;
+        top: 0;
+        left: 0;
+        z-index: -1;
     }
 </style>
 
 <body>
-    <div class="jumbotron jumbotron-fluid text-center">
+    <div class="bg"></div>
+    <div class="jumbotron jumbotron-fluid text-center align-middle">
         <div class="container">
             <h1 class="display-3">ArtShoutOut</h1>
             <p class="lead">Our website is currently under artistic restoration. We will be back soon.<br> To get a
