--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     }
 
     .bg {
-        background: url('../img/carouelbackground.jpg') no-repeat center center;
+        background: url('./main.jpg') no-repeat center center;
         position: fixed;
         width: 100%;
         height: 350px;
