--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 <style>
     .jumbotron {
         height: 50rem;
-        background: transparent;
+        margin-bottom: 0px;
+        color: white;
     }
 
     .bg {
         background: url('./main.jpg') no-repeat center center;
         position: fixed;
         width: 100%;
+        height: 100%;
         top: 0;
         left: 0;
         z-index: -1;
